update hero radius

--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -5,7 +5,7 @@
 }
 .background-wrapper {
   padding-bottom: 6rem;
-  border-bottom-left-radius: 25%;
+  border-bottom-left-radius: 64px;
 }
 .background-wrapper > h1 {
   margin-top: 3rem;
