--- a/sass/_container.scss
+++ b/sass/_container.scss
@@ -6,3 +6,20 @@
     max-width: 1070px;
   }
 }
+
+.container-right {
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+  @include mediaScreen(802px) {
+    margin-right: 0;
+  }
+}
+.container-left {
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
+  @include mediaScreen(802px) {
+    margin-left: 0;
+  }
+}
